After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679717 - Error message when dropping files from PCManFM
Error message when dropping files from PCManFM
Status: RESOLVED FIXED
Product: ghex
Classification: Applications
Component: general
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: GHex maintainers
GHex maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-10 22:58 UTC by Alex Henrie
Modified: 2012-07-13 20:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] Use g_uri_list_extract_uris when a file is dragged and dropped (1.27 KB, patch)
2012-07-10 22:59 UTC, Alex Henrie
committed Details | Review

Description Alex Henrie 2012-07-10 22:58:44 UTC
I use Lubuntu 12.04. When I drag and drop a file from PCManFM (the Lubuntu file manager), the file opens, but I also get the message:

Can not open URI:
The URI '' is not an absolute URI using the "file" scheme
Comment 1 Alex Henrie 2012-07-10 22:59:58 UTC
Created attachment 218492 [details] [review]
[PATCH] Use g_uri_list_extract_uris when a file is dragged and dropped

This patch resolves the problem.
Comment 2 Kalev Lember 2012-07-11 12:24:55 UTC
Review of attachment 218492 [details] [review]:

Hi Alex,

Thanks for the patch, looks good! I've pushed it to master as 979b117d.
Comment 3 Alex Henrie 2012-07-13 20:44:16 UTC
Thanks! By the way, GHex looks like it had the same problem with Nautilus, but the patch fixed that too.